Add custom page type, increase nav width

--- a/_includes/theme/site/header/nav.html
+++ b/_includes/theme/site/header/nav.html
@@ -21,16 +21,16 @@
         </ul>
         <ul>
             <li>
-                <a href="/notes-by-title">Notes by Title</a>
+                <a href="/{{ site.custom.page.type | downcase }}-by-title">{{ site.custom.page.type | capitalize }} by Title</a>
             </li>
             <li>
-                <a href="/notes-by-date">Notes by Date</a>
+                <a href="/{{ site.custom.page.type | downcase }}-by-date">{{ site.custom.page.type | capitalize }} by Date</a>
             </li>
             <li>
-                <a href="/notes-by-category">Notes by Category</a>
+                <a href="/{{ site.custom.page.type | downcase }}-by-category">{{ site.custom.page.type | capitalize }} by Category</a>
             </li>
             <li>
-                <a href="/notes-by-tag">Notes by Tag</a>
+                <a href="/{{ site.custom.page.type | downcase }}-by-tag">{{ site.custom.page.type | capitalize }} by Tag</a>
             </li>
         </ul>
     </div>
