Fix closing tag

--- a/_includes/plugins/search.html
+++ b/_includes/plugins/search.html
@@ -3,5 +3,5 @@
 {%- if site.search -%}
 <link rel="stylesheet" href="/assets/plugins/search/css/search.css">
 <script type="application/javascript" src="/assets/plugins/search/js/search.js" defer></script>
-{%- endif -%}
+{%- endif %}
 {{ }}
