--- a/_includes/theme/site/header.html
+++ b/_includes/theme/site/header.html
@@ -13,4 +13,5 @@
             {%- include theme/site/header/search.html -%}
             {%- include theme/site/header/nav.html -%}
         </div>
+    </div>
 </header>
